--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,117 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.fixed {
+  position: fixed !important;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 997;
+}
+
+.dropdown-tog {
+  white-space: no-wrap;
+}
+
+.nav-list-item {
+  font-family: 'Open Sans', sans-serif;
+  font-size: 16px;
+  font-weight: 400 !important;
+}
+
+@media only screen And (min-width:992px) {
+
+  .nav-list-item {
+    padding: 15px 16px !important;
+  }
+}
+
+
+/* Section-1  */
+
+.section {
+  position: relative;
+  top: 0;
+  left: 0;
+  right: 0;
+  padding: 160px 0 60px 0;
+  min-height: 100vh;
+}
+
+.section-bg {
+  background-color: #dedede;
+}
+
+.home-col1>h2 {
+  font-size: 64px;
+  font-family: 'Amatic SC', sans-serif;
+}
+
+/* Section-2  */
+
+.section-2 {
+  padding: 80px 0;
+}
+
+.section-header {
+  text-align: center;
+  padding-bottom: 30px;
+}
+
+.section-header>h2 {
+  font-size: 15px;
+  font-family: 'Open Sans', sans-serif;
+  color: #7F7F90;
+  font-weight: 400;
+  font-stretch: 100%;
+  letter-spacing: 1px;
+}
+
+.section-header>p {
+  font-size: 48px;
+  font-family: 'Amatic SC', sans-serif;
+  line-height: 72px;
+}
+
+.about-col1 {
+  background: url('../public/images/table.jpg') no-repeat center center/cover;
+  min-height: 250px;
+}
+
+.about-col2>p {
+  font-size: 16px;
+  font-family: 'Open Sans', sans-serif;
+  font-style: italic;
+  font-weight: 400;
+}
+
+.booking-no {
+  background-color: white;
+  width: 80%;
+}
+
+.abt-list>li {
+  font-size: 16px;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 400;
+}
+
+.abt-box {
+  height: 300px;
+  background: url('../public/images/food-cont2.jpeg') no-repeat center center/cover;
+}
+
+.stats {
+  background: url('../public/images/food-cont2.jpeg') no-repeat center center/cover;
+  /* height: 100px; */
+}
+
+.stats-hsla {
+  width: 100%;
+  height: 100%;
+  background-color: hsla(0, 0%, 0%, 0.6);
+  padding: 100px 0;
 }
