--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,18 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
+
+
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
+/* *************************************NavBAR***************************************************8 */
 .fixed {
   position: fixed !important;
   top: 0;
@@ -17,15 +26,41 @@
 }
 
 .nav-list-item {
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'inter', sans-serif !important;
   font-size: 16px;
-  font-weight: 400 !important;
+  font-weight: 600 !important;
+}
+
+.nav-list {
+  position: relative;
+  padding: 5px 3px;
+}
+
+.nav-list>a {
+  margin: 0;
+  padding: 6px 0 !important;
+}
+
+.nav-list>a::after {
+  content: ' ';
+  position: absolute;
+  bottom: 6px;
+  left: 0;
+  display: block;
+  background-color: red;
+  height: 2px;
+  width: 0;
+  transition: width 0.3s;
+}
+
+.nav-list>a:hover::after {
+  width: 100%;
 }
 
 @media only screen And (min-width:992px) {
 
-  .nav-list-item {
-    padding: 15px 16px !important;
+  .nav-list {
+    margin: 0 15px !important;
   }
 }
 
@@ -53,7 +88,7 @@
 /* Section-2  */
 
 .section-2 {
-  padding: 80px 0;
+  padding: 80px 0 20px 0;
 }
 
 .section-header {
@@ -114,4 +149,219 @@
   height: 100%;
   background-color: hsla(0, 0%, 0%, 0.6);
   padding: 100px 0;
+}
+
+/* *********************************************** Section Menu *************************************************  */
+.menu-nav {
+  width: 100%;
+}
+
+@media only screen And (min-width:992px) {
+  .menu-nav {
+    width: 30%;
+  }
+}
+
+.menu-nav-list {
+  position: relative;
+}
+
+.menu-nav-list>a>h4 {
+  font-size: 18px !important;
+  font-family: 'inter', sans-serif !important;
+}
+
+.menu-nav-list>a::after {
+  content: " ";
+  position: absolute;
+  bottom: 0;
+  display: block;
+  height: 2px;
+  background-color: grey;
+  width: 100%;
+}
+
+.menu-nav-list>a:hover {
+  cursor: pointer;
+}
+
+.menu-nav-list>a>h4:active {
+  color: red;
+}
+
+.menu-nav-list>a:active::after {
+  background-color: red;
+}
+
+/* *********************************************** Section Testimonials *************************************************  */
+.testimonials {
+  width: 100%;
+  padding: 30px 10px;
+  background-color: #EEEEEE;
+}
+
+.testi-caro {
+  width: 100%;
+  padding: 10px 5px;
+  background-color: rgb(224, 224, 224);
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+
+@media only screen And (min-width:992px) {
+
+  .testi-caro {
+    padding: 10px 5px;
+    width: 60%;
+    background-color: rgb(224, 224, 224);
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  }
+}
+
+.caro-item>div>img {
+  border-radius: 50%;
+  border: 5px solid white;
+  width: 100%;
+}
+
+@media only screen and (max-width:1000px) {
+  .caro-item>div>img {
+    width: 50%;
+  }
+}
+
+.testi-info>p {
+  font-size: 16px !important;
+  line-height: 24px !important;
+  font-style: italic !important;
+  font-family: "Open Sans", sans-serif !important;
+}
+
+.testi-info>h3 {
+  font-size: 20px !important;
+  font-family: 'inter', sans-serif !important;
+  font-weight: 700;
+  margin: 10px 0 5px;
+}
+
+.testi-info>h4 {
+  font-size: 14px;
+  font-family: 'inter', sans-serif !important;
+  color: #6C757D;
+  line-height: 16.8px;
+  font-weight: 500;
+}
+
+
+/* *********************************************** Events *************************************************  */
+.event-caro {
+  background: url('../public/images/events-bg.jpg') no-repeat center center/cover;
+  height: 500px;
+}
+
+@media only screen And (max-width:1000px) {
+  .event-caro {
+    height: 70vh;
+  }
+}
+
+.event-caro>div {
+  height: 100%;
+  width: 100%;
+  background-color: hsla(0, 0%, 0%, 0.6);
+  padding: 50px 50px;
+}
+
+.event-info>h3 {
+  color: #CDA45E;
+  font-size: 26px;
+  font-weight: 600;
+  line-height: 31.2px;
+}
+
+.event-info>:nth-child(2) {
+  font-family: "Open Sans", sans-serif !important;
+  font-size: 26px;
+  line-height: 39px;
+  font-weight: 700;
+  color: white;
+}
+
+.event-info>div>p {
+  font-size: 16px;
+  font-family: "Open Sans", sans-serif !important;
+  color: white;
+  line-height: 24px;
+  font-style: italic;
+  font-weight: 400;
+}
+
+
+
+/* *********************************************** CHEFS *************************************************  */
+.chef-box {
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  height: 100%;
+  width: 100%;
+  border-radius: 15px;
+}
+
+.chef-img>img {
+  height: 100% !important;
+  width: 100% !important;
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
+}
+
+.chef-img {
+  height: 60%;
+}
+
+.chef-info {
+  height: 40%;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+/* *********************************************** Footer *************************************************  */
+footer {
+  width: 100%;
+  background-color: black;
+  padding: 50px 0;
+}
+
+.foot-info>h4 {
+  font-size: 16px;
+  font-family: 'inter', sans-serif;
+  color: white;
+  line-height: 19.2px;
+  font-weight: 700;
+}
+
+.foot-info>p {
+  font-size: 14px;
+  font-family: 'Open Sans', sans-serif;
+  /* line-height: 21px; */
+  font-weight: 400;
+  margin-bottom: 2px !important;
+  color: rgba(255, 255, 255, 0.7);
+}
+
+.footer-lower {
+  border-top: 1px solid rgba(255, 255, 255, 0.7);
+}
+
+.footer-lower>p {
+  color: white;
+  font-size: 14px;
+  font-family: 'Open Sans', sans-serif;
+  color: rgba(255, 255, 255, 0.7);
 }
